# notion-rag

./: .gitignore  .pre-commit-config.yaml  README.md  config.yaml.sample  pyproject.toml  requirements.txt  test_rag.py  test_rag_sample.py
notion_rag/: __init__.py  config.py
notion_rag/api/: client.py  models.py  puller.py
notion_rag/db/: __init__.py  engine.py  indexer.py  models.py
notion_rag/parsing/: core.py  orchestrator.py
notion_rag/utils/: logging.py  persistence.py
scripts/: __init__.py  index.py  parse.py  pull.py
src/: __init__.py  config.py
src/api/: client.py  models.py  puller.py
src/db/: __init__.py  engine.py  indexer.py  models.py  query.py
src/parsing/: core.py  orchestrator.py
src/utils/: logging.py  persistence.py
